# niftimath-rs

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: elem.rs  main.rs  operator.rs  utils.rs
