[package]
name = "niftimath"
version = "0.1.0"
authors = ["clement"]
edition = "2018"

[dependencies]
approx = "0.3"
docopt = "1.1"
ndarray = { version = "0.13", features = ["rayon", "approx"] }
nifti = { version = "0.9", features = ["ndarray_volumes"] }
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"